# GraphPy

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml
graphpy/: __init__.py  graph.py  graph_list.py
graphpy/error/: __init__.py  graph_incompatible.py  weight_not_enabled.py
graphpy/interfaces/: __init__.py  abstracts.py  adjacent.py  type_lists.py  type_matrix.py
tests/: test_graph.py  test_graphlist.py  test_graphpy.py
